--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -159,7 +159,7 @@
 </head>
 <body>
   <h1>Extension Settings</h1>
-  <p class="subtitle">Configure your Meal Prep Recipe Manager app URL</p>
+  <p class="subtitle">Configure your app URL</p>
 
   <form id="settings-form">
     <div class="form-group">
@@ -171,7 +171,7 @@
         placeholder="https://your-app.vercel.app"
         required
       >
-      <p class="help-text">Enter the URL where your Meal Prep Recipe Manager is deployed (e.g., your Vercel URL)</p>
+      <p class="help-text">Enter the URL where your app is deployed (e.g., your Vercel URL)</p>
     </div>
 
     <div>
