--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meal Prep Recipe Manager</title>
+  <title>Babe, What's for Dinner?</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -19,14 +19,14 @@
           <path d="M2 17L12 22L22 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M2 12L12 17L22 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <h1>Meal Prep</h1>
+        <h1>Save Recipe</h1>
       </div>
     </header>
 
     <!-- Loading State -->
     <div id="loading" class="loading hidden">
       <div class="spinner"></div>
-      <p>Parsing recipe...</p>
+      <p>Grabbing recipe...</p>
     </div>
 
     <!-- Error State -->
@@ -39,7 +39,7 @@
     <div id="main-content" class="main-content">
       <!-- Initial State -->
       <div id="initial-state" class="initial-state">
-        <p>Click the button below to capture the recipe from this page.</p>
+        <p>Found a recipe? Grab it before you forget.</p>
         <button id="capture-btn" class="btn btn-primary">Capture Recipe</button>
       </div>
 
@@ -47,7 +47,7 @@
       <div id="recipe-form" class="recipe-form hidden">
         <form id="recipe-editor">
           <div class="form-group">
-            <label for="title">Recipe Title</label>
+            <label for="title">Name</label>
             <input type="text" id="title" name="title" required>
           </div>
 
@@ -57,43 +57,43 @@
               <input type="text" id="recipeType" name="recipeType" placeholder="Dinner">
             </div>
             <div class="form-group">
-              <label for="category">Category</label>
+              <label for="category">Protein</label>
               <input type="text" id="category" name="category" placeholder="Chicken">
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group">
-              <label for="prepTime">Prep Time</label>
-              <input type="text" id="prepTime" name="prepTime" placeholder="15 minutes">
+              <label for="prepTime">Prep</label>
+              <input type="text" id="prepTime" name="prepTime" placeholder="15 min">
             </div>
             <div class="form-group">
-              <label for="cookTime">Cook Time</label>
-              <input type="text" id="cookTime" name="cookTime" placeholder="30 minutes">
+              <label for="cookTime">Cook</label>
+              <input type="text" id="cookTime" name="cookTime" placeholder="30 min">
             </div>
             <div class="form-group">
-              <label for="servings">Servings</label>
+              <label for="servings">Serves</label>
               <input type="text" id="servings" name="servings" placeholder="4">
             </div>
           </div>
 
           <div class="form-group">
             <label for="ingredients">Ingredients (one per line)</label>
-            <textarea id="ingredients" name="ingredients" rows="6" placeholder="2 lbs chicken breast&#10;1 cup flour"></textarea>
+            <textarea id="ingredients" name="ingredients" rows="6" placeholder="2 lbs chicken&#10;1 cup flour"></textarea>
           </div>
 
           <div class="form-group">
             <label for="instructions">Instructions (one per line)</label>
-            <textarea id="instructions" name="instructions" rows="6" placeholder="Preheat oven to 425°F&#10;Mix ingredients"></textarea>
+            <textarea id="instructions" name="instructions" rows="6" placeholder="1. Preheat oven&#10;2. Mix stuff"></textarea>
           </div>
 
           <div class="form-group">
             <label for="tags">Tags (comma-separated)</label>
-            <input type="text" id="tags" name="tags" placeholder="healthy, quick, meal-prep">
+            <input type="text" id="tags" name="tags" placeholder="quick, healthy, meal-prep">
           </div>
 
           <div class="form-actions">
-            <button type="submit" id="save-btn" class="btn btn-primary">Add to Recipes</button>
+            <button type="submit" id="save-btn" class="btn btn-primary">Save Recipe</button>
             <button type="button" id="cancel-btn" class="btn btn-secondary">Cancel</button>
           </div>
         </form>
@@ -105,7 +105,7 @@
         <p id="success-message"></p>
         <div class="success-actions">
           <button id="open-app-btn" class="btn btn-primary">Open App</button>
-          <button id="new-recipe-btn" class="btn btn-secondary">Capture Another</button>
+          <button id="new-recipe-btn" class="btn btn-secondary">Save Another</button>
         </div>
       </div>
     </div>
