Fix JavaScript syntax error - escape apostrophe in error message

--- a/public/shopping-list.html
+++ b/public/shopping-list.html
@@ -611,7 +611,7 @@
         console.error('Error loading from Supabase:', error);
         // If we have local data, continue with that
         if (state.items.length === 0) {
-          showError('Couldn't load list', error.message);
+          showError('Could not load list', error.message);
         }
       }
     }
