Fix another apostrophe syntax error in share text

--- a/public/shopping-list.html
+++ b/public/shopping-list.html
@@ -741,7 +741,7 @@
         try {
           await navigator.share({
             title: 'Shopping List – ' + state.weekRange,
-            text: 'Here's what we need!',
+            text: "Here's what we need!",
             url: url,
           });
         } catch (e) {
